syntax = "proto3";

package diplodocus.foundation;

message DependOnMe {
  string yes = 1;
}
