syntax = "proto3";

package diplodocus.roof;

import "diplodocus/foundation/core.proto";

message Tile {
  diplodocus.foundation.DependOnMe yes = 1;
  bool am_i_roof_tile = 2;
}
