syntax = "proto3";

package ext;

import "diplodocus/foundation/core.proto";

message DependingOnIt {
  diplodocus.foundation.DependOnMe here = 1;
}
